--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "wind.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack --watch --mode=development",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "webpack"
   },
   "repository": {
     "type": "git",
@@ -21,6 +23,9 @@
     "express": "^4.17.1",
     "moment": "^2.24.0",
     "request": "^2.88.0",
-    "uniq": "^1.0.1"
+    "uniq": "^1.0.1",
+    "watchify": "^3.11.1",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10"
   }
 }
